# tla2bdd

./: README.md  pyproject.toml  tla2bdd.py
specs/: clock.tla
specs/traces/: counterexample.itf.json  counterexample1.json  counterexample1.tla
test/: clock.feature  test_clock.py
