[tool.poetry]
name = "tla2bdd"
version = "0.1.0"
description = "Generate BDD scenarios from TLA traces"
authors = ["Ranadeep Biswas <mail@rnbguy.at>"]
license = "Apache"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest-bdd = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
